samples/_failures_safe/1761086029_3237df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d374870.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_3d374870.c:143:9: error: expected declaration or statement at end of input
  143 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3d374870.c:143:9: error: expected declaration or statement at end of input
